# RBF-SVM-Brand-Verification-Model

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  generate_dummy_data.py  pyproject.toml  requirements.txt  setup.py
data/: dummy_data_1k.csv
docker/: Dockerfile  docker-compose.yml
docs/: api_reference.md
scripts/: evaluate_model.py  generate_dummy_data.py  predict.py  train_model.py
src/: config.py  data_loader.py  evaluation.py  feature_engineering.py  main.py  model.py  preprocessing.py  utils.py
src/rbf_svm/: __init__.py
src/rbf_svm/evaluation/: evaluator.py
src/rbf_svm/preprocessing/: feature_engineer.py
src/rbf_svm/training/: trainer.py
tests/: conftest.py  test_feature_engineer.py
